# Autonomous-AI-Agent-for-SIEM-L1-Triage

./: .gitattributes  .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt  test_evaluator.py
.github/workflows/: sync-to-hub.yml
app/: main.py
app/models/: assistant.py
app/routers/: assistant.py
app/services/: agent.py  ai_service.py  database.py  threat_intel.py
app/static/: app.js  index.html  styles.css
app/utils/: log_parser.py
data/: initial_triage_cases.json  sample_logs.json  triage_cases.json
data/evaluation_data/: eval_data.json
scripts/: generate_eval_data.py  run_evaluation_pipeline.py
